# example

./: .gitignore  CMakeLists.txt  LICENSE
ACE/: CMakeLists.txt  test_ace.cpp
CudaTest/: CMakeLists.txt  CudaTest.cpp  test_cuda_func.cu
CzxActor/: CMakeLists.txt  CzxActor.cpp
Eigen/: CMakeLists.txt  testEigen.cpp
FunixActor/: CMakeLists.txt  FunixActor.cpp
TRT/: CMakeLists.txt  mnist.h  sampleOnnxMNIST.cpp
actor/: CMakeLists.txt  actor.cpp
bin_x86_64/: example  example1  example_s  j.json  pub
bin_x86_64/data/: yolov3-tiny.cfg  yolov3-tiny_gzss.cfg
inc/: CzxActor.h  FixedQueue.h  FunixActor.h  MessageBase.h  MessageData.h  WordStatics.h  actor.h  cvYolo.h  czx.h  mqtt_pub.h  testEigen.h  test_ace.h  test_actor.h  test_json.h  test_mqtt.h  test_thrift.h  test_zmq.h
inc/Plugin/: IPlugin.h  PluginLoader.h
plugin/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
pub/: CMakeLists.txt  pub.cpp
src/: builder.h  client.cpp  client.h  computer.h  cvYolo.cpp  main (复件).cpp  main(复件).cpp  main.c  main.cpp  main2.cpp  mqtt_pub.cpp  product.h  sig.h  student.cpp
tests/: CMakeLists.txt  WordStatics.cpp  test.cpp  test_actor.cpp  test_json.cpp  test_mqtt.cpp  test_zmq.cpp
thrift/: CMakeLists.txt  shared.thrift  test_thrift.cpp
thrift/gen-cpp/: Calculator.h  tutorial_constants.cpp  tutorial_constants.h  tutorial_types.cpp  tutorial_types.h
